--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <h1 class="title">GoldDigger</h1>
         <img src="gold.png" alt="gold bars and nuggets">
         <section class="price-info-container">
-            <p>£<span id="price-display" class="price" aria-live="assertive">----.--</span> / Oz*</p>
+            <p>$<span id="price-display" class="price" aria-live="assertive">----.--</span> / Oz*</p>
             <p id="connection-status" class="status" aria-live="polite">Live Price 🟢</p>
         </section>
         <form>
