--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <form>
             <label for="investment-amount">Amount to invest</label>
             <div class="input-container">
-                <div class="currency">£</div>
+                <div class="currency">$</div>
                 <input type="number" id="investment-amount" placeholder="100.00" required>
             </div>
             <button id="invest-btn" class="invest-btn" aria-label="Invest in gold now">Invest Now!</button>
@@ -33,8 +33,8 @@
         <!-- This dialog opens after a successful purchase -->
         <dialog class="outputs" role="dialog" aria-labelledby="dialog-title" aria-describedby="investment-summary" lang="en">
             <h2>Summary</h2>
-            <p id="investment-summary">You just bought 1.3 ounces (ozt) for £3000. \n You will receive documentation shortly.</p>
-                <button aria-label="Close dialog and return to main page" autofocus>OK</button>
+            <p id="investment-summary">You just bought --- ounces (ozt) for $----. The sale has been executed and you will receive documentation shortly.</p>
+            <button id="close-btn" aria-label="Close dialog and return to main page" autofocus>OK</button>
         </dialog>
         <p class="footnote">* 1oz = 1 troy ounce of 24 Carat Gold</p>
     </main>
